Fridges are jpgs
Co-authored-by: Aaron Herres <iam@aaronherres.com>

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       Base-bones HTML5
     </main>
     <img src="./duct-cover.png" />
-    <img src="./fridge.png" />
+    <img src="./fridge.jpg" />
     <img src="./power-cord.png" />
     <noscript>
       <!-- Optional, place it wherever it makes sense -->
